--- a/com.prairie.eevernote/src/com/prairie/eevernote/EEProperties.properties
+++ b/com.prairie.eevernote/src/com/prairie/eevernote/EEProperties.properties
@@ -24,4 +24,9 @@ EEClipperPlugin.ActionDelegate.AddSelectionToEvernote.Message=Clipping selection
 EEClipperPlugin.ActionDelegate.AddSelectionToEvernote.Subtask.Message=Transferring data...
 EEClipperPlugin.ActionDelegate.AddSelectionToEvernote.OutOfDateMessage=\ is out of date. Please upgrade to the latest version.
 
+EEClipperPlugin.ActionDelegate.ClipScreenshotToEvernote.Message=Clipping selection...
+EEClipperPlugin.ActionDelegate.ClipScreenshotToEvernote.Subtask.Message=Transferring data...
+EEClipperPlugin.ActionDelegate.ClipScreenshotToEvernote.OutOfDateMessage=\ is out of date. Please upgrade to the latest version.
+EEClipperPlugin.ActionDelegate.ClipScreenshotToEvernote.Hint=Double click to clip, right click to escape
+
 EEClipperPlugin.EEClipperImpl.Exception.Message=Evernote SDK is Out Of Date
