--- a/com.prairie.eevernote/build.properties
+++ b/com.prairie.eevernote/build.properties
@@ -9,7 +9,9 @@ bin.includes = plugin.xml,\
                lib/mime-util-2.1.3.jar,\
                lib/slf4j-api-1.7.7.jar,\
                lib/slf4j-nop-1.7.7.jar,\
-               lib/commons-lang3-3.3.2.jar
+               lib/commons-lang3-3.3.2.jar,\
+               plugin_logo.png,\
+               about.ini
 jars.compile.order = .
 jars.extra.classpath = lib/evernote-api-1.25.1.jar,\
                        lib/mime-util-2.1.3.jar,\
