--- a/com.prairie.eevernote/src/com/prairie/eevernote/EEProperties.properties
+++ b/com.prairie.eevernote/src/com/prairie/eevernote/EEProperties.properties
@@ -1,12 +1,12 @@
-EEClipperPlugin.ConfigurationsDialog.Shell.Title=Evernote Clipper Configurations
-EEClipperPlugin.HotInputDialog.Shell.Title=Quick Settings
+EEClipperPlugin.ConfigurationsDialog.Shell.Title=Clip Configurations
+EEClipperPlugin.HotInputDialog.Shell.Title=Quick Organize
 
-EEClipperPlugin.ConfigurationsDialog.Title=Configure token and Evernote preferences
-EEClipperPlugin.ConfigurationsDialog.Message=Configure required token and optional Evernote preferences on a global level, so that you can clip resources to your Evernote account.
+EEClipperPlugin.ConfigurationsDialog.Title=OAuth, organize configurations
+EEClipperPlugin.ConfigurationsDialog.Message=Configure required token and optional organize on a global level
 
 EEClipperPlugin.Configurations.OAuth=OAuth
 EEClipperPlugin.Configurations.Token=Token
-EEClipperPlugin.Configurations.EvernotePreferences=Evernote Preferences
+EEClipperPlugin.Configurations.EvernotePreferences=Organize
 EEClipperPlugin.Configurations.Notebook=Notebook
 EEClipperPlugin.Configurations.Note=Note
 EEClipperPlugin.Configurations.Tags=Tags
