--- a/com.prairie.eevernote/src/com/prairie/eevernote/EEProperties.properties
+++ b/com.prairie.eevernote/src/com/prairie/eevernote/EEProperties.properties
@@ -10,8 +10,9 @@ EEClipperPlugin.Configurations.EvernotePreferences=Organize
 EEClipperPlugin.Configurations.Notebook=Notebook
 EEClipperPlugin.Configurations.Note=Note
 EEClipperPlugin.Configurations.Tags=Tags
-EEClipperPlugin.Configurations.Note.HintMessage=type text to select note, clipped content will be appended to selected note
-EEClipperPlugin.Configurations.Tags.HintMessage=type text to add tags, multiple tags are comma separated
+EEClipperPlugin.Configurations.Notebook.HintMessage=type text(autosuggest) to select notebook
+EEClipperPlugin.Configurations.Note.HintMessage=type text(autosuggest) to select note, clipped content will be inserted to the head
+EEClipperPlugin.Configurations.Tags.HintMessage=type text(autosuggest) to add tags, multiple tags are comma separated
 EEClipperPlugin.Configurations.Comments=Comments
 EEClipperPlugin.Configurations.ErrorOccurred=Error Occurred
 EEClipperPlugin.Configurations.Refresh=Refresh
