fix enhancement #4: [High Priority]UX of clip screenshot needs to be more friendly

--- a/com.prairie.eevernote/src/com/prairie/eevernote/EEProperties.properties
+++ b/com.prairie.eevernote/src/com/prairie/eevernote/EEProperties.properties
@@ -28,6 +28,6 @@ EEClipperPlugin.ActionDelegate.AddSelectionToEvernote.OutOfDateMessage=\ is out 
 EEClipperPlugin.ActionDelegate.ClipScreenshotToEvernote.Message=Clipping selection...
 EEClipperPlugin.ActionDelegate.ClipScreenshotToEvernote.Subtask.Message=Transferring data...
 EEClipperPlugin.ActionDelegate.ClipScreenshotToEvernote.OutOfDateMessage=\ is out of date. Please upgrade to the latest version.
-EEClipperPlugin.ActionDelegate.ClipScreenshotToEvernote.Hint=Double click to clip, right click to escape
+EEClipperPlugin.ActionDelegate.ClipScreenshotToEvernote.Hint=Double click to clip, right-click/Esc to escape
 
 EEClipperPlugin.EEClipperImpl.Exception.Message=Evernote SDK is Out Of Date
