OAuth enabled for UX

--- a/com.prairie.eevernote/src/com/prairie/eevernote/EEProperties.properties
+++ b/com.prairie.eevernote/src/com/prairie/eevernote/EEProperties.properties
@@ -5,7 +5,7 @@ EEClipperPlugin.ConfigurationsDialog.Title=OAuth, organize configurations
 EEClipperPlugin.ConfigurationsDialog.Message=Configure required token and optional organize on a global level
 
 EEClipperPlugin.Configurations.OAuth=OAuth
-EEClipperPlugin.Configurations.Token=Token
+EEClipperPlugin.Configurations.Token=Authentication token
 EEClipperPlugin.Configurations.EvernotePreferences=Organize
 EEClipperPlugin.Configurations.Notebook=Notebook
 EEClipperPlugin.Configurations.Note=Note
@@ -13,6 +13,7 @@ EEClipperPlugin.Configurations.Tags=Tags
 EEClipperPlugin.Configurations.Notebook.HintMessage=type text(autosuggest) to select notebook
 EEClipperPlugin.Configurations.Note.HintMessage=type text(autosuggest) to select note, clipped content will be inserted to the head
 EEClipperPlugin.Configurations.Tags.HintMessage=type text(autosuggest) to add tags, multiple tags are comma separated
+EEClipperPlugin.Configurations.Token.HintMessage=click the link to the left to authenticate to Evernote account
 EEClipperPlugin.Configurations.Comments=Comments
 EEClipperPlugin.Configurations.ErrorOccurred=Error Occurred
 EEClipperPlugin.Configurations.Refresh=Refresh
