--- a/com.prairie.eevernote/build.properties
+++ b/com.prairie.eevernote/build.properties
@@ -4,15 +4,27 @@ bin.includes = plugin.xml,\
                META-INF/,\
                icons/,\
                lib/,\
-               lib/evernote-api-1.25.1.jar,\
+               plugin.png,\
+               about.ini,\
                .,\
+               lib/evernote-api-1.25.1.jar,\
                lib/mime-util-2.1.3.jar,\
                lib/slf4j-api-1.7.7.jar,\
                lib/slf4j-nop-1.7.7.jar,\
                lib/commons-lang3-3.3.2.jar,\
-               plugin.png,\
-               about.ini
-jars.compile.order = .
+               lib/commons-codec-1.4.jar,\
+               lib/jetty-http-9.2.3.v20140905.jar,\
+               lib/jetty-io-9.2.3.v20140905.jar,\
+               lib/jetty-server-9.2.3.v20140905.jar,\
+               lib/jetty-util-9.2.3.v20140905.jar,\
+               lib/scribe-1.3.5.jar,\
+               lib/servlet-api-3.1.jar,\
+               lib/jasypt-1.9.2.jar
 jars.extra.classpath = lib/evernote-api-1.25.1.jar,\
                        lib/mime-util-2.1.3.jar,\
-                       lib/commons-lang3-3.3.2.jar
+                       lib/commons-lang3-3.3.2.jar,\
+                       lib/servlet-api-3.1.jar,\
+                       lib/jetty-util-9.2.3.v20140905.jar,\
+                       lib/jetty-server-9.2.3.v20140905.jar,\
+                       lib/jasypt-1.9.2.jar
+jars.compile.order = .
