--- a/com.prairie.eevernote/build.properties
+++ b/com.prairie.eevernote/build.properties
@@ -19,12 +19,14 @@ bin.includes = plugin.xml,\
                lib/jetty-util-9.2.3.v20140905.jar,\
                lib/scribe-1.3.5.jar,\
                lib/servlet-api-3.1.jar,\
-               lib/jasypt-1.9.2.jar
+               lib/jasypt-1.9.2.jar,\
+               lib/commons-io-2.4.jar
 jars.extra.classpath = lib/evernote-api-1.25.1.jar,\
                        lib/mime-util-2.1.3.jar,\
                        lib/commons-lang3-3.3.2.jar,\
                        lib/servlet-api-3.1.jar,\
                        lib/jetty-util-9.2.3.v20140905.jar,\
                        lib/jetty-server-9.2.3.v20140905.jar,\
-                       lib/jasypt-1.9.2.jar
+                       lib/jasypt-1.9.2.jar,\
+                       lib/commons-io-2.4.jar
 jars.compile.order = .
