update brand pictures

--- a/com.prairie.eemory/about.properties
+++ b/com.prairie.eemory/about.properties
@@ -4,9 +4,9 @@
 # fill-ins are supplied by about.mappings
 # This file should be translated.
 
-blurb=Eemory - An Eclipse Plug-in for Evernote\n\
+blurb=Eemory - An Eclipse plug-in aimed at integrating Evernote within the Eclipse IDE\n\
 \n\
 Version: {featureVersion}\n\
 \n\
 Copyright (c) 2014.\n\
-Visit https://github.com/prairie/Eemory
+Visit http://prairie.github.io/Eemory
