--- a/com.prairie.eemory/build.properties
+++ b/com.prairie.eemory/build.properties
@@ -19,7 +19,8 @@ bin.includes = plugin.xml,\
                lib/scribe-1.3.5.jar,\
                lib/servlet-api-3.1.jar,\
                lib/jasypt-1.9.2.jar,\
-               lib/commons-io-2.4.jar
+               lib/commons-io-2.4.jar,\
+               OSGI-INF/l10n/bundle.properties
 jars.extra.classpath = lib/evernote-api-1.25.1.jar,\
                        lib/mime-util-2.1.3.jar,\
                        lib/commons-lang3-3.3.2.jar,\
