externalize plugin.xml using plugin.properties and feature.xml

--- a/com.prairie.eemory/about.ini
+++ b/com.prairie.eemory/about.ini
@@ -17,7 +17,7 @@ featureImage=icons/plugin_32x32.png
 # needed for primary features only
 
 # Property "appName" contains name of the application (translated)
-appName=Eemory
+appName=%appName
 
 # Property "welcomePage" contains path to welcome page (special XML-based format)
 # welcomePage=$nl$/welcome.xml
