--- a/com.prairie.eemory/about.properties
+++ b/com.prairie.eemory/about.properties
@@ -8,5 +8,7 @@ blurb=Eemory - An Eclipse plug-in aimed at integrating Evernote within the Eclip
 \n\
 Version: {featureVersion}\n\
 \n\
-Copyright (c) 2014.\n\
+Copyright (c) 2014 Jianwei Liu and contributors.\n\
 Visit http://prairie.github.io/Eemory
+
+appName=Eemory
