--- a/com.prairie.eemory/plugin.properties
+++ b/com.prairie.eemory/plugin.properties
@@ -1,8 +1,8 @@
 #Properties file for com.prairie.eemory
-Bundle-Vendor = prairie
-Bundle-Name = Eemory
-ClipConfigs = ClipÅ Configurations...
-ClipSelectionToEvernote = Clip Selection to Evernote
-ClipFileToEvernote = Clip File to Evernote
-ClipScreenshotToEvernote = Clip Screenshot to Evernote
-ClipToEvernote = Clip to Evernote
+Bundle-Vendor=prairie
+Bundle-Name=Eemory
+ClipConfigs=Clip Configurations...
+ClipSelectionToEvernote=Clip Selection to Evernote
+ClipFileToEvernote=Clip File to Evernote
+ClipScreenshotToEvernote=Clip Screenshot to Evernote
+ClipToEvernote=Clip to Evernote
