change suffix of properties file from non-supported zh_CN to zh.

--- a/com.prairie.eemory.nl.build/pom.xml
+++ b/com.prairie.eemory.nl.build/pom.xml
@@ -9,8 +9,8 @@
 	<packaging>pom</packaging>
 
 	<modules>
-		<module>../com.prairie.eemory.nl_zh_CN</module>
-		<module>../com.prairie.eemory.nl_zh_CN.feature</module>
+		<module>../com.prairie.eemory.nl_zh</module>
+		<module>../com.prairie.eemory.nl_zh.feature</module>
 		<module>../com.prairie.eemory.nl.updatesite</module>
 	</modules>
 
