--- a/com.prairie.eemory.nl_zh_CN/build.properties
+++ b/com.prairie.eemory.nl_zh_CN/build.properties
@@ -2,7 +2,8 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               about_zh_CN.properties,\
-               feature_zh_CN.properties,\
-               messages_zh_CN.properties,\
-               plugin_zh_CN.properties
+               about_zh.properties,\
+               feature_zh.properties,\
+               messages_zh.properties,\
+               plugin_zh.properties,\
+               fragment.properties
