--- a/com.prairie.eemory.nl_zh_CN/fragment.properties
+++ b/com.prairie.eemory.nl_zh_CN/fragment.properties
@@ -1,3 +1,3 @@
-#Properties file for com.prairie.eemory_nl_zh_CN
+#Properties file for com.prairie.eemory_nl_zh
 Bundle-Vendor=prairie
 Bundle-Name=\u8680\u8BB0\u7B80\u4F53\u4E2D\u6587\u8BED\u8A00\u652F\u6301
