--- a/com.prairie.eemory.nl_zh_CN.feature/pom.xml
+++ b/com.prairie.eemory.nl_zh_CN.feature/pom.xml
@@ -9,6 +9,6 @@
 		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>com.prairie.eemory.nl_zh_CN.feature</artifactId>
+	<artifactId>com.prairie.eemory.nl_zh.feature</artifactId>
 	<packaging>eclipse-feature</packaging>
 </project>
