--- a/com.prairie.eemory.nl_zh_CN/pom.xml
+++ b/com.prairie.eemory.nl_zh_CN/pom.xml
@@ -9,6 +9,6 @@
         <version>0.1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>com.prairie.eemory.nl_zh_CN</artifactId>
+    <artifactId>com.prairie.eemory.nl_zh</artifactId>
     <packaging>eclipse-plugin</packaging>
 </project>
