--- a/com.prairie.eemory.feature/feature.properties
+++ b/com.prairie.eemory.feature/feature.properties
@@ -1,6 +1,6 @@
 #Properties file for com.prairie.eemory.feature
 Feature-Description=Eemory is an Eclipse Plug-in aimed at integrating Evernote within\n\
-the Eclipse IDE, which bring the benefits offered by cloud storage\n\
+the Eclipse IDE, which brings the benefits offered by cloud storage\n\
 into Eclipse IDE.
 Feature-Name=Eemory
 Feature-Provider-Name=prairie
