fixed bug #80: String related change.

--- a/com.prairie.eemory/plugin.properties
+++ b/com.prairie.eemory/plugin.properties
@@ -2,7 +2,7 @@
 Bundle-Vendor=prairie
 Bundle-Name=Eemory
 ClipConfigs=Clip Configurations...
-ClipSelectionToEvernote=Clip Selection to Evernote
-ClipFileToEvernote=Clip File to Evernote
-ClipScreenshotToEvernote=Clip Screenshot to Evernote
+ClipSelectionToEvernote=Clip Selection
+ClipFileToEvernote=Clip Files
+ClipScreenshotToEvernote=Clip Screenshot
 ClipToEvernote=Clip to Evernote
