--- a/com.lttpp.eemory.feature/feature.properties
+++ b/com.lttpp.eemory.feature/feature.properties
@@ -1,9 +1,9 @@
-#Properties file for com.prairie.eemory.feature
+#Properties file for com.lttpp.eemory.feature
 Feature-Description=Eemory is an Eclipse Plug-in aimed at integrating Evernote within\n\
 the Eclipse IDE, which brings the benefits offered by cloud storage\n\
 into Eclipse IDE.
 Feature-Name=Eemory
-Feature-Provider-Name=prairie
+Feature-Provider-Name=LTTPP
 Feature-Copyright=Copyright (c) 2015 Jianwei Liu and contributors
 Feature-License=The MIT License (MIT)\n\
 \n\
