--- a/com.lttpp.eemory/plugin.properties
+++ b/com.lttpp.eemory/plugin.properties
@@ -1,5 +1,5 @@
-#Properties file for com.prairie.eemory
-Bundle-Vendor=prairie
+#Properties file for com.lttpp.eemory
+Bundle-Vendor=LTTPP
 Bundle-Name=Eemory
 ClipConfigs=Clip Configurations...
 ClipSelectionToEvernote=Clip Selection
