--- a/com.lttpp.eemory.updatesite/pom.xml
+++ b/com.lttpp.eemory.updatesite/pom.xml
@@ -3,12 +3,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<relativePath>../com.prairie.eemory.build/pom.xml</relativePath>
-		<groupId>com.prairie.eemory.build</groupId>
+		<relativePath>../com.lttpp.eemory.build/pom.xml</relativePath>
+		<groupId>com.lttpp.eemory.build</groupId>
 		<artifactId>parent</artifactId>
 		<version>1.1.1-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>com.prairie.eemory.updatesite</artifactId>
+	<artifactId>com.lttpp.eemory.updatesite</artifactId>
 	<packaging>eclipse-repository</packaging>
 </project>
