--- a/com.lttpp.eemory/about.properties
+++ b/com.lttpp.eemory/about.properties
@@ -9,6 +9,6 @@ blurb=Eemory - An Eclipse plug-in aimed at integrating Evernote within the Eclip
 Version: {featureVersion}\n\
 \n\
 Copyright (c) 2015 Jianwei Liu and contributors.\n\
-Visit http://prairie.github.io/Eemory
+Visit http://lttpp.github.io/Eemory
 
 appName=Eemory
