--- a/com.lttpp.eemory/plugin.xml
+++ b/com.lttpp.eemory/plugin.xml
@@ -3,56 +3,56 @@
 <plugin>
 
     <extension point="org.eclipse.ui.commands">
-        <category name="Eemory Category" id="com.prairie.eemory.commands.category">
+        <category name="Eemory Category" id="com.lttpp.eemory.commands.category">
         </category>
-        <command name="Clip to Evernote" categoryId="com.prairie.eemory.commands.category" id="com.prairie.eemory.commands.ClipToEvernote">
-            <commandParameter id="com.prairie.eemory.command.parameter" name="Command Parameter" optional="true">
+        <command name="Clip to Evernote" categoryId="com.lttpp.eemory.commands.category" id="com.lttpp.eemory.commands.ClipToEvernote">
+            <commandParameter id="com.lttpp.eemory.command.parameter" name="Command Parameter" optional="true">
             </commandParameter>
         </command>
-        <command name="Clip File to Evernote" categoryId="com.prairie.eemory.commands.category" id="com.prairie.eemory.commands.ClipFileToEvernote">
-            <commandParameter id="com.prairie.eemory.command.parameter" name="Command Parameter" optional="true">
+        <command name="Clip File to Evernote" categoryId="com.lttpp.eemory.commands.category" id="com.lttpp.eemory.commands.ClipFileToEvernote">
+            <commandParameter id="com.lttpp.eemory.command.parameter" name="Command Parameter" optional="true">
             </commandParameter>
         </command>
-        <command name="Clip Selection to Evernote" categoryId="com.prairie.eemory.commands.category" id="com.prairie.eemory.commands.ClipSelectionToEvernote">
-            <commandParameter id="com.prairie.eemory.command.parameter" name="Command Parameter" optional="true">
+        <command name="Clip Selection to Evernote" categoryId="com.lttpp.eemory.commands.category" id="com.lttpp.eemory.commands.ClipSelectionToEvernote">
+            <commandParameter id="com.lttpp.eemory.command.parameter" name="Command Parameter" optional="true">
             </commandParameter>
         </command>
-        <command name="Clip Screenshot to Evernote" categoryId="com.prairie.eemory.commands.category" id="com.prairie.eemory.commands.ClipScreenshotToEvernote">
-            <commandParameter id="com.prairie.eemory.command.parameter" name="Command Parameter" optional="true">
+        <command name="Clip Screenshot to Evernote" categoryId="com.lttpp.eemory.commands.category" id="com.lttpp.eemory.commands.ClipScreenshotToEvernote">
+            <commandParameter id="com.lttpp.eemory.command.parameter" name="Command Parameter" optional="true">
             </commandParameter>
         </command>
-        <command name="Clip Configurations..." categoryId="com.prairie.eemory.commands.category" id="com.prairie.eemory.commands.Configurations">
-            <commandParameter id="com.prairie.eemory.command.parameter" name="Command Parameter" optional="true">
+        <command name="Clip Configurations..." categoryId="com.lttpp.eemory.commands.category" id="com.lttpp.eemory.commands.Configurations">
+            <commandParameter id="com.lttpp.eemory.command.parameter" name="Command Parameter" optional="true">
             </commandParameter>
         </command>
     </extension>
 
-    <!--extension point="org.eclipse.ui.commandImages"> <image commandId="com.prairie.eemory.commands.ClipFileToEvernote"
-    icon="icons/icon_file_16x16.png"/> <image commandId="com.prairie.eemory.commands.ClipSelectionToEvernote"
+    <!--extension point="org.eclipse.ui.commandImages"> <image commandId="com.lttpp.eemory.commands.ClipFileToEvernote"
+    icon="icons/icon_file_16x16.png"/> <image commandId="com.lttpp.eemory.commands.ClipSelectionToEvernote"
     icon="icons/icon_selection_16x16.png"/> </extension -->
 
     <extension point="org.eclipse.ui.handlers">
-        <handler name="Eemory Handler" commandId="com.prairie.eemory.commands.ClipToEvernote" class="com.prairie.eemory.handlers.EeHandler">
+        <handler name="Eemory Handler" commandId="com.lttpp.eemory.commands.ClipToEvernote" class="com.lttpp.eemory.handlers.EeHandler">
             <enabledWhen>
-                <reference definitionId="com.prairie.eemory.definitions.Clipable"/>
+                <reference definitionId="com.lttpp.eemory.definitions.Clipable"/>
             </enabledWhen>
         </handler>
-        <handler name="Eemory Handler" commandId="com.prairie.eemory.commands.ClipFileToEvernote" class="com.prairie.eemory.handlers.EeHandler">
+        <handler name="Eemory Handler" commandId="com.lttpp.eemory.commands.ClipFileToEvernote" class="com.lttpp.eemory.handlers.EeHandler">
         </handler>
-        <handler name="Eemory Handler" commandId="com.prairie.eemory.commands.ClipSelectionToEvernote" class="com.prairie.eemory.handlers.EeHandler">
+        <handler name="Eemory Handler" commandId="com.lttpp.eemory.commands.ClipSelectionToEvernote" class="com.lttpp.eemory.handlers.EeHandler">
             <enabledWhen>
-                <reference definitionId="com.prairie.eemory.definitions.TextSelection"/>
+                <reference definitionId="com.lttpp.eemory.definitions.TextSelection"/>
             </enabledWhen>
         </handler>
-        <handler name="Eemory Handler" commandId="com.prairie.eemory.commands.ClipScreenshotToEvernote" class="com.prairie.eemory.handlers.EeHandler">
+        <handler name="Eemory Handler" commandId="com.lttpp.eemory.commands.ClipScreenshotToEvernote" class="com.lttpp.eemory.handlers.EeHandler">
         </handler>
-        <handler name="Eemory Handler" commandId="com.prairie.eemory.commands.Configurations" class="com.prairie.eemory.handlers.EeHandler">
+        <handler name="Eemory Handler" commandId="com.lttpp.eemory.commands.Configurations" class="com.lttpp.eemory.handlers.EeHandler">
         </handler>
     </extension>
 
-    <!--extension point="org.eclipse.ui.bindings"> <key commandId="com.prairie.eemory.commands.ClipFileToEvernote"
+    <!--extension point="org.eclipse.ui.bindings"> <key commandId="com.lttpp.eemory.commands.ClipFileToEvernote"
     contextId="org.eclipse.ui.contexts.window" sequence="M1+6" schemeId="org.eclipse.ui.defaultAcceleratorConfiguration">
-    </key> <key commandId="com.prairie.eemory.commands.ClipSelectionToEvernote"
+    </key> <key commandId="com.lttpp.eemory.commands.ClipSelectionToEvernote"
     contextId="org.eclipse.ui.contexts.window" sequence="M1+8" schemeId="org.eclipse.ui.defaultAcceleratorConfiguration">
     </key> </extension -->
 
@@ -61,43 +61,43 @@
         <menuContribution
                 locationURI="toolbar:org.eclipse.ui.main.toolbar?after=additions">
             <toolbar
-                    id="com.prairie.eemory.toolbars.ClipToEvernoteToolbar">
+                    id="com.lttpp.eemory.toolbars.ClipToEvernoteToolbar">
                 <command style="pulldown"
-                        commandId="com.prairie.eemory.commands.ClipToEvernote"
+                        commandId="com.lttpp.eemory.commands.ClipToEvernote"
                         icon="icons/icon_evernote_16x16.png" tooltip="%ClipToEvernote"
-                        id="com.prairie.eemory.toolbars.ClipToEvernoteCommand">
-                    <parameter name="com.prairie.eemory.command.parameter"
+                        id="com.lttpp.eemory.toolbars.ClipToEvernoteCommand">
+                    <parameter name="com.lttpp.eemory.command.parameter"
                             value="Clip to Evernote">
                     </parameter>
                 </command>
             </toolbar>
         </menuContribution>
         <menuContribution
-                locationURI="menu:com.prairie.eemory.toolbars.ClipToEvernoteCommand">
-            <!--menu label="Sample Menu" mnemonic="M" id="com.prairie.eemory.menus.sampleMenu" -->
+                locationURI="menu:com.lttpp.eemory.toolbars.ClipToEvernoteCommand">
+            <!--menu label="Sample Menu" mnemonic="M" id="com.lttpp.eemory.menus.sampleMenu" -->
             <command label="%ClipSelectionToEvernote" icon="icons/icon_selection_16x16.png"
-                    commandId="com.prairie.eemory.commands.ClipSelectionToEvernote">
-                <parameter name="com.prairie.eemory.command.parameter"
+                    commandId="com.lttpp.eemory.commands.ClipSelectionToEvernote">
+                <parameter name="com.lttpp.eemory.command.parameter"
                         value="Clip Selection to Evernote">
                 </parameter>
             </command>
             <command label="%ClipFileToEvernote" icon="icons/icon_file_16x16.png"
-                    commandId="com.prairie.eemory.commands.ClipFileToEvernote">
-                <parameter name="com.prairie.eemory.command.parameter"
+                    commandId="com.lttpp.eemory.commands.ClipFileToEvernote">
+                <parameter name="com.lttpp.eemory.command.parameter"
                         value="Clip File to Evernote">
                 </parameter>
             </command>
             <command label="%ClipScreenshotToEvernote" icon="icons/icon_screenshot_16x16.png"
-                    commandId="com.prairie.eemory.commands.ClipScreenshotToEvernote">
-                <parameter name="com.prairie.eemory.command.parameter"
+                    commandId="com.lttpp.eemory.commands.ClipScreenshotToEvernote">
+                <parameter name="com.lttpp.eemory.command.parameter"
                         value="Clip Screenshot to Evernote">
                 </parameter>
             </command>
             <separator name="separatorLine" visible="true">
             </separator>
             <command label="%ClipConfigs"
-                    commandId="com.prairie.eemory.commands.Configurations">
-                <parameter name="com.prairie.eemory.command.parameter"
+                    commandId="com.lttpp.eemory.commands.Configurations">
+                <parameter name="com.lttpp.eemory.command.parameter"
                         value="Clip Configurations...">
                 </parameter>
             </command>
@@ -106,35 +106,35 @@
 
         <menuContribution locationURI="popup:org.eclipse.ui.popup.any?after=additions">
             <menu label="%ClipToEvernote" icon="icons/icon_evernote_16x16.png"
-                    id="com.prairie.eemory.popupMenu">
+                    id="com.lttpp.eemory.popupMenu">
                 <command label="%ClipSelectionToEvernote" icon="icons/icon_selection_16x16.png"
-                        commandId="com.prairie.eemory.commands.ClipSelectionToEvernote">
-                    <parameter name="com.prairie.eemory.command.parameter"
+                        commandId="com.lttpp.eemory.commands.ClipSelectionToEvernote">
+                    <parameter name="com.lttpp.eemory.command.parameter"
                             value="Clip Selection to Evernote">
                     </parameter>
                 </command>
                 <command label="%ClipFileToEvernote" icon="icons/icon_file_16x16.png"
-                        commandId="com.prairie.eemory.commands.ClipFileToEvernote">
-                    <parameter name="com.prairie.eemory.command.parameter"
+                        commandId="com.lttpp.eemory.commands.ClipFileToEvernote">
+                    <parameter name="com.lttpp.eemory.command.parameter"
                             value="Clip File to Evernote">
                     </parameter>
                 </command>
                 <command label="%ClipScreenshotToEvernote" icon="icons/icon_screenshot_16x16.png"
-                        commandId="com.prairie.eemory.commands.ClipScreenshotToEvernote">
-                    <parameter name="com.prairie.eemory.command.parameter"
+                        commandId="com.lttpp.eemory.commands.ClipScreenshotToEvernote">
+                    <parameter name="com.lttpp.eemory.command.parameter"
                             value="Clip Screenshot to Evernote">
                     </parameter>
                 </command>
                 <separator name="separatorLine" visible="true">
                 </separator>
                 <command label="%ClipConfigs"
-                        commandId="com.prairie.eemory.commands.Configurations">
-                    <parameter name="com.prairie.eemory.command.parameter"
+                        commandId="com.lttpp.eemory.commands.Configurations">
+                    <parameter name="com.lttpp.eemory.command.parameter"
                             value="Clip Configurations...">
                     </parameter>
                 </command>
                 <visibleWhen checkEnabled="false">
-                    <reference definitionId="com.prairie.eemory.definitions.Clipable"/>
+                    <reference definitionId="com.lttpp.eemory.definitions.Clipable"/>
                 </visibleWhen>
             </menu>
         </menuContribution>
@@ -143,16 +143,16 @@
 
     <extension point="org.eclipse.core.expressions.propertyTesters">
         <propertyTester
-            id="com.prairie.eemory.testers.FileTester"
+            id="com.lttpp.eemory.testers.FileTester"
             type="org.eclipse.core.runtime.IAdaptable"
-            namespace="com.prairie.eemory.testers"
+            namespace="com.lttpp.eemory.testers"
             properties="isFile"
-            class="com.prairie.eemory.handlers.FileTester">
+            class="com.lttpp.eemory.handlers.FileTester">
         </propertyTester>
     </extension>
 
     <extension point="org.eclipse.core.expressions.definitions">
-        <definition id="com.prairie.eemory.definitions.TextSelection">
+        <definition id="com.lttpp.eemory.definitions.TextSelection">
             <with variable="selection">
                 <adapt type="org.eclipse.jface.text.ITextSelection" />
             </with>
@@ -165,20 +165,20 @@
     </extension>
 
     <extension point="org.eclipse.core.expressions.definitions">
-        <definition id="com.prairie.eemory.definitions.File">
+        <definition id="com.lttpp.eemory.definitions.File">
             <with variable="selection">
                 <iterate ifEmpty="false"  operator="and">
-                    <test property="com.prairie.eemory.testers.isFile" forcePluginActivation="true"/>
+                    <test property="com.lttpp.eemory.testers.isFile" forcePluginActivation="true"/>
                 </iterate>
             </with>
         </definition>
     </extension>
 
     <extension point="org.eclipse.core.expressions.definitions">
-        <definition id="com.prairie.eemory.definitions.Clipable">
+        <definition id="com.lttpp.eemory.definitions.Clipable">
             <or>
-                <reference definitionId="com.prairie.eemory.definitions.TextSelection"/>
-                <reference definitionId="com.prairie.eemory.definitions.File"/>
+                <reference definitionId="com.lttpp.eemory.definitions.TextSelection"/>
+                <reference definitionId="com.lttpp.eemory.definitions.File"/>
             </or>
         </definition>
     </extension>
