--- a/com.lttpp.eemory.feature/feature.properties
+++ b/com.lttpp.eemory.feature/feature.properties
@@ -4,10 +4,10 @@ the Eclipse IDE, which brings the benefits offered by cloud storage\n\
 into Eclipse IDE.
 Feature-Name=Eemory
 Feature-Provider-Name=LTTPP
-Feature-Copyright=Copyright (c) 2015 Jianwei Liu and contributors
+Feature-Copyright=Copyright (c) 2015-2016 Jianwei Liu and contributors
 Feature-License=The MIT License (MIT)\n\
 \n\
-Copyright (c) 2015 Jianwei Liu and contributors\n\
+Copyright (c) 2015-2016 Jianwei Liu and contributors\n\
 \n\
 Permission is hereby granted, free of charge, to any person obtaining a copy\n\
 of this software and associated documentation files (the "Software"), to deal\n\
