--- a/com.lttpp.eemory/about.properties
+++ b/com.lttpp.eemory/about.properties
@@ -8,7 +8,7 @@ blurb=Eemory - An Eclipse plug-in aimed at integrating Evernote within the Eclip
 \n\
 Version: {featureVersion}\n\
 \n\
-Copyright (c) 2015 Jianwei Liu and contributors.\n\
+Copyright (c) 2015-2016 Jianwei Liu and contributors.\n\
 Visit http://lttpp.github.io/Eemory
 
 appName=Eemory
